IDEA-150906 / IDEA-149395 calculate scroll background from view automatically

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -111,7 +111,7 @@ ide.splitter.mouseZone=6
 ide.smart.horizontal.scrolling=true
 ide.scroll.new.layout=true
 ide.scroll.align.component=true
-ide.scroll.background.auto=false
+ide.scroll.background.auto=true
 ide.scroll.background.wide=false
 ide.scroll.bar.expand.animation=false
 ide.scroll.track.border.paint=false
