--- a/platform/platform-resources-en/src/messages/OptionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/OptionsBundle.properties
@@ -211,11 +211,13 @@ settings.panel.title=Settings
 
 configurable.group.root.settings.display.name=ROOT GROUP
 configurable.group.appearance.settings.weight=70
+configurable.group.appearance.settings.help.topic=configurable.group.appearance.help.topic
 configurable.group.appearance.settings.display.name=Appearance \\& Behavior
 configurable.group.appearance.settings.description=<html><body>\
   Personalize IDE appearance and behavior: change themes and font size, tune the keymap, \
   configure plugins and system settings, such as password policies, HTTP proxy, updates and more.
 configurable.group.editor.settings.weight=60
+configurable.group.editor.settings.help.topic=configurable.group.editor.help.topic
 configurable.group.editor.settings.display.name=Editor
 configurable.group.editor.settings.description=<html><body>\
   Personalize source code appearance by changing fonts, highlighting styles, indents, etc. \
@@ -227,6 +229,7 @@ configurable.group.project.settings.display.name=Default Project
 configurable.group.project.settings.description=<html><body>\
   Project Settings
 configurable.group.build.settings.weight=30
+configurable.group.build.settings.help.topic=configurable.group.build.help.topic
 configurable.group.build.settings.display.name=Build, Execution, Deployment
 configurable.group.build.settings.description=<html><body>\
   Configure the project Execution settings, set up Deployment options and customize the Debugger behavior.
@@ -236,10 +239,12 @@ configurable.group.build.tools.settings.display.name=Build Tools
 configurable.group.build.tools.settings.description=<html><body>\
   Configure your project integration with different build tools: Maven, Gradle or Gant.
 configurable.group.language.settings.weight=20
+configurable.group.language.settings.help.topic=configurable.group.language.help.topic
 configurable.group.language.settings.display.name=Languages \\& Frameworks
 configurable.group.language.settings.description=<html><body>\
   Configure the settings related to specific frameworks and technologies used in your project.
 configurable.group.tools.settings.weight=10
+configurable.group.tools.settings.help.topic=configurable.group.tools.help.topic
 configurable.group.tools.settings.display.name=Tools
 configurable.group.tools.settings.description=<html><body>\
   Configure integration with third-party applications, specify the SSH Terminal connection settings, \
