abstract introduce parameter object dialog

--- a/platform/platform-resources-en/src/messages/RefactoringBundle.properties
+++ b/platform/platform-resources-en/src/messages/RefactoringBundle.properties
@@ -800,3 +800,5 @@ expand.method.reference.warning=Method is used in method reference. Proceeding w
 refactoring.introduce.parameter.object.references.to.be.modified=References to be modified
 refactoring.introduce.parameter.object.method.whose.parameters.are.to.wrapped=Method whose parameters are to wrapped
 refactoring.introduce.parameter.object.command.name=Introduced parameter class {0} for {1}()
+refactoring.introduce.parameter.object.method.to.extract.parameters.from.label=Method to extract parameters from
+refactoring.introduce.parameter.object.title=Introduce Parameter Object
