--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1287,7 +1287,7 @@ string.equals.empty.string.quickfix=Replace with 'length()==0'
 string.equals.empty.string.isempty.quickfix=Replace with 'isEmpty()'
 tail.recursion.replace.quickfix=Replace tail recursion with iteration
 if.statement.with.too.many.branches.max.option=Maximum number of branches:
-if.statement.with.too.many.branches.problem.descriptor=''<code>#ref</code>'' has too many branches ({0}) #loc
+if.statement.with.too.many.branches.problem.descriptor=<code>#ref</code> has too many branches ({0}) #loc
 negated.conditional.ignore.option=Ignore '!= null' comparisons
 negated.conditional.invert.quickfix=Invert condition
 negated.if.else.ignore.negated.null.option=Ignore '!= null' comparisons
@@ -1298,9 +1298,9 @@ pointless.boolean.expression.ignore.option=Ignore named constants in determining
 simplifiable.conditional.expression.problem.descriptor=<code>#ref</code> can be simplified to ''{0}'' #loc
 simplifiable.if.statement.problem.descriptor=<code>#ref</code> statement can be replaced with ''{0}'' #loc
 switch.statement.density.min.option=Minimum density of branches: %
-switch.statement.density.problem.descriptor=''<code>#ref</code>'' has too low of a branch density ({0}%) #loc
+switch.statement.density.problem.descriptor=<code>#ref</code> has too low of a branch density ({0}%) #loc
 switch.statement.with.too.few.branches.min.option=Minimum number of branches:
-switch.statement.with.too.few.branches.problem.descriptor=''<code>#ref</code>'' has too few branches ({0}), and should probably be replaced with an ''if'' statement #loc
+switch.statement.with.too.few.branches.problem.descriptor=<code>#ref</code> has too few branches ({0}), and should probably be replaced with an ''if'' statement #loc
 switch.statement.without.default.ignore.option=Ignore if all cases of an enumerated type are covered
 unnecessary.label.remove.quickfix=Remove label
 unnecessary.return.problem.descriptor=<code>#ref</code> is unnecessary as the last statement in a 'void' method #loc
