fix "Open Files" scope when no files are open (IDEA-149129)

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -805,6 +805,7 @@ action.group.by.scope.type=Group by Scope Type
 action.description.group.by.scope=Group by Scope Type (production, test, libraries)
 action.show.included.only=Show Included Only
 action.description.show.included.only=Show only files included to the current scope selected
+scope.open.files=Open Files
 scope.current.file=Current File
 scope.selection=Selection
 scope.files.in.previous.search.result=Files in Previous Search Result
