IDEA-154548 Allow to disable all icons on gutter and make gutter thiner if the option is enabled

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -359,6 +359,7 @@ checkbox.show.inner.whitespaces=Inner
 checkbox.show.trailing.whitespaces=Trailing
 checkbox.show.method.separators=Show method separators
 checkbox.show.small.icons.in.gutter=Show icons preview in gutter for small icons (Java)
+checkbox.show.gutter.icons=Show gutter &icons
 checkbox.show.line.numbers=Show line numbers
 checkbox.show.breadcrumbs=Show breadcrumbs
 checkbox.right.margin=Show right margin (configured in Code Style options)
