--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -172,6 +172,8 @@ action.EditorToggleShowIndentLines.text=Sh_ow Indent Guides
 action.EditorToggleShowIndentLines.description=Toggle display indent guides in current editor
 action.EditorToggleShowLineNumbers.text=Show L_ine Numbers
 action.EditorToggleShowLineNumbers.description=Toggle display line numbers in current editor
+action.EditorToggleShowGutterIcons.text=Show Gutter Ic_ons
+action.EditorToggleShowGutterIcons.description=Toggle display gutter icons in current editor
 action.EditorToggleUseSoftWraps.text=Use Soft Wraps
 action.EditorToggleUseSoftWraps.description=Toggle using soft wraps in current editor
 action.EditorConsoleScrollToTheEnd.text=Scroll to the end
@@ -1454,6 +1456,7 @@ group.EditorGutterPopupMenu.text=Editor Gutter Popup Menu
 action.EditorGutterToggleGlobalSoftWraps.text=Soft-Wrap All Files
 action.EditorGutterToggleLocalSoftWraps.gutterText=Soft-Wrap Current File
 action.EditorGutterToggleGlobalLineNumbers.text=Show Line Numbers
+action.EditorGutterToggleGlobalGutterIcons.text=Show Gutter Icons
 action.EditorGutterToggleGlobalIndentLines.text=Show Indent Guides
 action.ExcludeFromProject.text=Exclude From Project...
 group.MarkFileAs.text=Mark File As
