--- a/platform/platform-resources-en/src/messages/InspectionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/InspectionsBundle.properties
@@ -253,6 +253,7 @@ inspection.invalid.node.text=(INVALID)
 inspection.problem.descriptor.count={0, choice, 0#|1#(1 item)|2#({0,number,integer} items)}
 inspection.action.go.next=Go Next Problem
 inspection.actiongo.prev=Go Prev Problem
+inspection.action.suppress=Suppressing inspection ''{0}''
 
 inspection.javadoc.display.name=Declaration has Javadoc problems
 inspection.javadoc.ref.display.name=Declaration has problems in Javadoc references
