unwrap lambda (IDEA-151266)

--- a/platform/platform-resources-en/src/messages/CodeInsightBundle.properties
+++ b/platform/platform-resources-en/src/messages/CodeInsightBundle.properties
@@ -102,6 +102,7 @@ unwrap.array.initializer=Unwrap array initializer
 unwrap.synchronized=Unwrap 'synchronized...'
 unwrap.with.placeholder=Unwrap ''{0}''
 unwrap.anonymous=Unwrap 'anonymous...'
+unwrap.lambda=Unwrap 'lambda...'
 generate.equals.hashcode.wizard.title=Generate equals() and hashCode()
 generate.equals.hashcode.equals.fields.chooser.title=Choose &fields to be included in equals()
 generate.equals.hashcode.hashcode.fields.chooser.title=Choose &fields to be included in hashCode()
