rest api: limit number of requests per minite and check is host trusted (cherry picked from commit bade655)

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -723,3 +723,6 @@ dumb.aware.run.configurations.description=Enable executing run configurations in
 
 focus.follows.mouse.workarounds=false
 focus.follows.mouse.workarounds.description=Enables some workarounds for Focus-follows-mouse issues, like IDEA-112015
+
+ide.rest.api.paranoid.mode=true
+ide.rest.api.requests.per.minute=30
