--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -732,3 +732,6 @@ ide.screenreader.autodetect.accessibility.description=Automatically detect wheth
 
 editor.rainbow.identifiers=false
 editor.rainbow.identifiers.description=Rainbow identifiers in editor
+
+ide.rest.api.paranoid.mode=true
+ide.rest.api.requests.per.minute=60
