IDEA-CR-10285 set limit to 60, fix quotes

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1197,5 +1197,5 @@ title.load.project.from.share=Loading Project From Network
 warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
 title.load.file.from.share=Loading File From Network
 
-warning.use.rest.api='{0}' API is requested. Do you trust '{1}'?
+warning.use.rest.api=''{0}'' API is requested. Do you trust ''{1}''?
 title.use.rest.api=Using REST API
