PHP rainbow identifiers WI-21884 Semantic highlighting - each $var in scope can has own distinct color

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -726,3 +726,6 @@ angular.js.ui.router.diagram.description=Enables AngularJS ui-router states&view
 
 cidr.xcode.derived.data.override=true
 cidr.xcode.derived.data.override.description=Ignore Xcode DerivedData location settings
+
+editor.rainbow.identifiers=false
+editor.rainbow.identifiers.description=Rainbow identifiers in editor
