patch: apply somehow - new resolve dialog for patch conflicts without base revision

--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -352,6 +352,8 @@ patch.apply.conflict.title=Patch Conflict for {0}
 patch.apply.conflict.local.version=Local Version
 patch.apply.conflict.merged.version=Merge Result
 patch.apply.conflict.patched.version=Patched Version
+patch.apply.conflict.patched.somehow.version=Result
+patch.apply.conflict.patch=Patch
 patch.apply.select.title=Select Patch File
 patch.apply.select.base.directory.title=Select Base Directory
 shelve.changes.action=Shelve Changes
