[ui] wording in IDE Update settings

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -938,8 +938,8 @@ updates.settings.secure=Use secure connection
 updates.settings.build.number=Build number
 updates.settings.current.version=Current version
 updates.settings.last.check=Last checked
-updates.settings.ignored=View/edit ignored builds
-updates.settings.ignored.title=Ignored Builds
+updates.settings.ignored=View/edit ignored updates
+updates.settings.ignored.title=Ignored Updates
 update.plugin.host.url.message=Repository URL:
 update.no.update.hosts=No plugin repositories configured
 update.edit.plugin.host.title=Edit Repository
