--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1107,3 +1107,12 @@ alphabetical.mode.is.on.warning=Alphabetical order for tabs is ON. Switch it OFF
 
 file.changed.externally.message=File was changed on disk.
 file.changed.externally.reload=Reload
+warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
+title.load.project.from.share=Loading Project From Network
+title.load.local.project=Loading Project
+warning.load.local.project=You are about to open a project. Do you trust this location?\n{0}
+warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
+title.load.file.from.share=Loading File From Network
+warning.load.local.file=You are about to open file. Do you want to continue?\n{0}
+title.load.local.file=Loading File
+
