--- a/community-tests/src/tests/testGroups.properties
+++ b/community-tests/src/tests/testGroups.properties
@@ -37,7 +37,7 @@ com.android.tools.idea.gradle.invoker.GradleInvokerWithArtifactTest
 com.android.tools.idea.gradle.structure.configurables.editor.dependencies.AndroidSdkRepositorySearchTest
 com.android.tools.idea.gradle.testing.*
 com.android.tools.idea.gradle.util.UpdateGradlePluginVersionTest
-com.android.tools.idea.gradle.javadoc.AndroidJavaDocWithGradleTest
+com.android.tools.idea.javadoc.AndroidJavaDocWithGradleTest
 com.android.tools.idea.gradle.project.GradleProjectImporterTest
 com.android.tools.idea.gradle.compiler.AndroidGradleBuildProcessParametersProviderTest
 com.android.tools.idea.sdk.JdksTest
@@ -124,6 +124,8 @@ com.android.tools.idea.editors.strings.StringResourceDataTest
 com.android.tools.idea.rendering.ClassConverterTest
 com.android.tools.idea.gradle.service.notification.errors.UnknownHostErrorHandlerTest
 com.android.tools.idea.wizard.AsyncValidatorTest
+org.jetbrains.jps.android.AndroidBuilderTest
+com.android.tools.idea.gradle.service.notification.hyperlink.CustomNotificationListenerTest
 
 [GRADLE_INTEGRATION_TESTS]
 org.jetbrains.plugins.gradle.importing.*
