activatable built-in web server (by default false)

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -735,3 +735,4 @@ editor.rainbow.identifiers.description=Rainbow identifiers in editor
 
 ide.http.server.response.actual.status=false
 ide.rest.api.requests.per.minute=30
+ide.built.in.web.server.activatable=false
