--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -89,6 +89,7 @@ checkbox.wrap.text=Wrap text
 checkbox.parentheses.around.method.arguments=Add parentheses around method arguments
 checkbox.rename.local.variables.inplace=Enable in-place mode
 checkbox.rename.local.variables.preselect=Preselect old name
+generated.quote.marks=Generated quote marks:
 editbox.keep.blank.lines=Keep blank lines:
 checkbox.keep.white.spaces=Keep white spaces
 checkbox.align.text=Align text
