IDEA-23075 Debugger "Set Value" TextBox should be a TextArea - implemented editable mode of the view text action

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1027,6 +1027,7 @@ group.XDebugger.settings.text=Settings
 action.Debugger.AdjustArrayRange.text=Adjust Range...
 action.Debugger.Inspect.text=Inspect
 action.Debugger.CopyValue.text=Copy Value
+action.Debugger.ViewEditText.text=View/Edit Text
 action.Debugger.ViewText.text=View Text
 action.Debugger.ViewText.description=View text value of selected node in a separate pane
 action.Debugger.ShowReferring.text=Show Referring Objects
