--- a/platform/platform-resources-en/src/messages/DiffBundle.properties
+++ b/platform/platform-resources-en/src/messages/DiffBundle.properties
@@ -70,6 +70,7 @@ merge.dialog.all.conflicts.resolved.message.text=All conflicts resolved
 merge.statistics.message={0, choice, 0#No changes|1#One change|2#{0, number} changes}. {1, choice, 0#No conflicts|1#One conflict|2#{0, number} conflicts}
 merge.dialog.exit.without.applying.changes.confirmation.message=Are you sure you want to exit without applying changes?
 cancel.visual.merge.dialog.title=Cancel Visual Merge
+apply.somehow.status.message.all.applied=All hunks resolved
 apply.somehow.status.message.already.applied={0, number} {0, choice, 1#hunk is|2#hunks are} already applied
 apply.somehow.status.message.cant.apply=Can''t apply {0, number} {0, choice, 1#hunk|2#hunks}
 apply.somehow.status.message.cant.apply.some=Can''t apply {0, number} of {1, number} hunks
@@ -77,6 +78,8 @@ merge.dialog.apply.partially.resolved.changes.confirmation.message=There {0, cho
 apply.partially.resolved.merge.dialog.title=Apply Changes
 merge.dialog.resolve.side.with.discard.title=Accept Changes
 merge.dialog.resolve.side.with.discard.message=Are you sure you want to discard your changes and accept {0, choice, 0#left|1#right} side?
+merge.all.changes.processed.message.text=All changes have been processed.<br><a href="">Save changes and finish merging</a>
+apply.patch.all.changes.processed.message.text=All hunks have been processed.<br><a href=\"\">Save changes and finish resolve</a>
 merge.all.changes.have.processed.save.and.finish.confirmation.text=All changes have been processed.\nWould you like to save changes and finish merging?
 all.changes.processed.dialog.title=All Changes Processed
 merge.save.and.finish.button=Save and &Finish
