activation token 141 (cherry picked from commit ef978dc)

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -295,7 +295,7 @@ license.panel.buildit.evaluation.expires.in.one=1 day left
 license.panel.buildit.evaluation.expires.in.many={0} days left
 license.panel.discover.license.server.error.message=Unable to discover license server url
 license.panel.ping.license.server.error.message=No response from autodetected license server {0}
-license.panel.ping.license.server.error.title=No response from server 
+license.panel.ping.license.server.error.title=No response from server
 license.panel.default.server.discover=Discover
 editbox.license.user.name=User name:
 editbox.license.license.key=License key:
@@ -1107,6 +1107,9 @@ alphabetical.mode.is.on.warning=Alphabetical order for tabs is ON. Switch it OFF
 
 file.changed.externally.message=File was changed on disk.
 file.changed.externally.reload=Reload
+activation.auth.title=Unauthorized Operation
+activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
+
 warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
 title.load.project.from.share=Loading Project From Network
 title.load.local.project=Loading Project
