--- a/plugins/devkit/resources/META-INF/plugin.xml
+++ b/plugins/devkit/resources/META-INF/plugin.xml
@@ -54,7 +54,7 @@
     <lang.documentationProvider language="XML"
                                 implementationClass="org.jetbrains.idea.devkit.references.extensions.ExtensionPointDocumentationProvider"/>
 
-    <localInspection language="XML" shortName="PluginXmlValidity" displayName="Plugin.xml Validity"
+    <localInspection language="XML" shortName="PluginXmlValidity" displayName="Plugin.xml Validity" applyToDialects="false"
                      groupKey="inspections.group.name" enabledByDefault="true" level="ERROR"
                      implementationClass="org.jetbrains.idea.devkit.inspections.PluginXmlDomInspection"/>
     <localInspection language="JAVA" shortName="ComponentNotRegistered"
@@ -80,13 +80,13 @@
                      groupKey="inspections.group.name"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="org.jetbrains.idea.devkit.inspections.RegistrationProblemsInspection"/>
-    <localInspection language="XML" shortName="InspectionMappingConsistency"
+    <localInspection language="XML" shortName="InspectionMappingConsistency" applyToDialects="false"
                      groupKey="inspections.group.name"
                      displayName="&lt;inspection&gt; tag consistency"
                      enabledByDefault="true"
                      level="WARNING"
                      implementationClass="org.jetbrains.idea.devkit.inspections.InspectionMappingConsistencyInspection"/>
-    <localInspection language="XML" shortName="ExtensionPointBeanClass"
+    <localInspection language="XML" shortName="ExtensionPointBeanClass" applyToDialects="false"
                      groupKey="inspections.group.name"
                      displayName="&lt;extensionPoint&gt; beanClass specification"
                      enabledByDefault="true"
