platform: 'activate' command now requires authentication token

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1157,3 +1157,6 @@ checkbox.allow.line.numbers=Allow Line Numbers
 checkbox.allow.vcs.annotations=Allow VCS Annotations
 presentation.mode.fon.size=Font size\:
 update.available.group=Update Checker
+
+activation.auth.title=Unauthorized Operation
+activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
