--- a/platform/platform-resources-en/src/messages/XDebuggerBundle.properties
+++ b/platform/platform-resources-en/src/messages/XDebuggerBundle.properties
@@ -56,7 +56,7 @@ xbreakpoint.radio.leave.enabled=Leave enabled
 xbreakpoint.master.breakpoint.none=<None>
 xbreakpoint.master.breakpoint.description=Disabled until selected breakpoint is hit:
 rule.name.group.by.file=Group by file
-xbreakpoint.default.display.text=Line {0} in {1}
+xbreakpoint.default.display.text={1}:{0}
 xbreakpoint.label.empty=Select a breakpoint
 
 xbreakpoint.reached.text=Breakpoint reached:
