inspection tool window: optimize getting sorted descriptors and checking for readonly

--- a/platform/platform-resources-en/src/messages/InspectionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/InspectionsBundle.properties
@@ -711,3 +711,4 @@ todo.comment.problem.descriptor=TODO comment <code>#ref</code> #loc
 long.line.display.name=Line is longer than allowed by code style
 
 inspection.default.annotation.param=Default annotation parameter value
+preparing.for.apply.fix=Preparing to Apply Fix...
