platform: 'activate' command now requires authentication token

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1161,3 +1161,6 @@ presentation.mode.fon.size=Font size\:
 update.available.group=Update Checker
 
 loading.editors=Loading files...
+
+activation.auth.title=Unauthorized Operation
+activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
