--- a/python/setup-test-environment/build.gradle
+++ b/python/setup-test-environment/build.gradle
@@ -28,8 +28,8 @@ envs {
 //    jython "jython25", []
 //    textfile "jython25/tags.txt", "jython"
     
-    conda "pyqt5", "2.7", ["PyQt5"]
-    textfile "pyqt5/tags.txt", "pyqt5"
+//    conda "pyqt5", "2.7", ["python-qt5"]
+//    textfile "pyqt5/tags.txt", "pyqt5"
   }
 
   conda "django_latest", "3.5", ["django"]
@@ -43,7 +43,7 @@ if (new File(envs.envsDirectory, "django_latest").exists() &&
   delete new File(envs.envsDirectory, "django_latest")
 }
 
-if (envs.envsDirectory.exists() &&
+if (System.getenv("NO_CLEAN") == null && envs.envsDirectory.exists() &&
     envs.envsDirectory.lastModified()<project.buildscript.sourceFile.lastModified()) {
   // clean the cache if the build script if modified later
   println "Cleaning cached environments at " + envs.envsDirectory
