miscellaneous accessibility issues with built-in server (IDEA-154304)

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -397,4 +397,5 @@ focus.fix.lost.cursor.description=See IDEA-79312
 
 ide.inertial.mouse.fix=false
 ide.inertial.mouse.fix.description=See IDEA-71508
+ide.built.in.web.server.activatable=true
 
