miscellaneous accessibility issues with built-in server (IDEA-154304)

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -386,4 +386,5 @@ ide.certificate.manager=true
 
 run.processes.with.pty=false
 command.line.execution.timeout=30
+ide.built.in.web.server.activatable=true
 
