miscellaneous accessibility issues with built-in server (IDEA-154304)

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1164,3 +1164,14 @@ loading.editors=Loading files...
 
 activation.auth.title=Unauthorized Operation
 activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
+warning.load.project.from.share=You are opening a project from a network share. Do you trust this location?\n{0}
+title.load.project.from.share=Loading Project From Network
+title.load.local.project=Loading Project
+warning.load.local.project=You are about to open a project. Do you trust this location?\n{0}
+warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
+title.load.file.from.share=Loading File From Network
+warning.load.local.file=You are about to open file. Do you want to continue?\n{0}
+title.load.local.file=Loading File
+
+warning.use.rest.api=''{0}'' API is requested. Do you trust ''{1}''?
+title.use.rest.api=Using REST API
