--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -474,3 +474,6 @@ editor.config.stop.at.project.root.description=Stops searching for .editorconfig
 
 JDK8042508.bug.fixed=false
 JDK8042508.bug.fixed.description=Disable check for type variable until javac bug is fixed
+ide.rest.api.paranoid.mode=true
+ide.rest.api.requests.per.minute=30
+ide.built.in.web.server.activatable=true
