miscellaneous accessibility issues with built-in server (IDEA-154304)

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -362,4 +362,24 @@ show.all.look.and.feels.description=Make accessible all available Look and Feels
 cvs.roots.refresh.uses.vfs=true
 cvs.roots.refresh.uses.vfs.description=Should CVS roots refresh after update use VFS
 editor.wrap.collapsed.region.at.line.start=false
+vcs.add.remove.silent=true
+ide.open.file.in.temp.project.dir=true
+ide.open.file.in.temp.project.dir.description=Enables opening file in temp project directory
+
+editor.allow.multiple.carets=true
+embed.scene.builder=true
+
+dsm.retina.darcula.legend=true
+dsm.retina.darcula.legend.description=Experimental DSM legend component
+
+ide.scratch.enabled=false
+
+editor.injected.highlighting.enabled=true
+editor.injected.highlighting.enabled.description=Disables injected fragments highlighting (requires project reopening)
+
+ide.certificate.manager=true
+
+run.processes.with.pty=false
+command.line.execution.timeout=30
+ide.built.in.web.server.activatable=true
 
