[patch]: apply patch from clipboard implemented as separated action

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1228,6 +1228,8 @@ action.ChangesView.CreatePatch.text=Create Patch...
 action.ChangesView.CreatePatch.description=Create a patch from the selected changes
 action.ChangesView.ApplyPatch.text=Apply Patch...
 action.ChangesView.ApplyPatch.description=Apply a patch to the sources of the project
+action.ChangesView.ApplyPatchFromClipboard.text=Apply Patch from Clipboard...
+action.ChangesView.ApplyPatchFromClipboard.description=Apply a patch to the sources of the project
 action.ChangesView.Shelve.text=Shelve Changes...
 action.ChangesView.Shelve.description=Save changes to an external patch file and remove them from the code
 action.ShelvedChanges.Unshelve.text=Unshelve Changes
