can't change java.awt.Color from gutter icon

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1196,3 +1196,5 @@ warning.load.project.from.share=You are opening a project from a network share. 
 title.load.project.from.share=Loading Project From Network
 warning.load.file.from.share=You are opening a file from a network share. Do you want to continue?\n{0}
 title.load.file.from.share=Loading File From Network
+
+change.color.command.text=Change color
