miscellaneous accessibility issues with built-in server (IDEA-154304)

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -1131,3 +1131,5 @@ title.load.local.file=Loading File
 
 activation.auth.title=Unauthorized Operation
 activation.auth.message=The command line launcher is outdated. Please refresh it (via Tools | Create Command-line Launcher).
+warning.use.rest.api=''{0}'' API is requested. Do you trust ''{1}''?
+title.use.rest.api=Using REST API
