--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -316,3 +316,5 @@ windows.jumplist.description=Enables JumpLists on Windows
 GRADLE.system.in.process=true
 # suppress inspection "UnusedProperty"
 GRADLE.system.in.process.description=Whether IDEA should use 'in-process' mode for interaction with gradle api
+
+ide.built.in.web.server.activatable=true
