fold entities to their char value #WEB-422 fixed

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -371,6 +371,7 @@ checkbox.show.tabs.tooltips=Show tabs tooltips
 group.code.folding=Code Folding
 checkbox.collapse.xml.tags=XML tags
 checkbox.collapse.html.style.attribute=HTML 'style' attribute
+checkbox.collapse.entities=XML entities
 checkbox.collapse.anonymous.classes=<html>Anonymous classes</html>
 checkbox.collapse.closures=<html>"Closures" (anonymous classes implementing one method, before Java 8)</html>
 checkbox.collapse.generic.constructor.parameters=<html>Generic constructor and method parameters</html>
