miscellaneous accessibility issues with built-in server (IDEA-154304)

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -277,3 +277,5 @@ disable.graph.inference=false
 comment.by.line.bulk.lines.trigger=100
 
 scene.builder.start.executable=true
+
+ide.built.in.web.server.activatable=true
