vcs: Enabled unversioned files in commit dialog by default

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -262,7 +262,7 @@ vcs.log.recent.commits.count=1000
 vcs.log.open.another.log.visible=false
 
 vcs.executable.validator.timeout.sec=60
-vcs.unversioned.files.in.commit=false
+vcs.unversioned.files.in.commit=true
 
 psi.incremental.reparse.depth.limit=1000
 psi.deferIconLoading=true
