--- a/plugins/stats-collector/resources/META-INF/plugin.xml
+++ b/plugins/stats-collector/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>com.intellij.stats.completion</id>
   <name>Completion Stats Collector</name>
-  <version>0.0.32</version>
+  <version>0.0.33</version>
   <vendor email="yaroslav.lepenkin@jetbrains.com" url="http://www.jetbrains.com">JetBrains</vendor>
 
   <description><![CDATA[
@@ -9,11 +9,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-      <ul>
-        <li>Event tracking corrected</li>
-        <li>Corrected event serialization engine</li>
-        <li>Fix for OOM while sending data</li>
-      </ul>
+      Fix KNPE
     ]]>
   </change-notes>
 
