IDEA-75002 merge: allow to assign shortcuts to actions
* fix action titles - capitalisation, wording

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1279,6 +1279,12 @@ action.Diff.AppendLeftSide.text=Append Left Side
 action.Diff.AppendRightSide.text=Append Right Side
 action.Diff.IgnoreLeftSide.text=Ignore Left Side
 action.Diff.IgnoreRightSide.text=Ignore Right Side
+action.Diff.ApplyNonConflicts.text=Apply All Non-Conflicting Changes
+action.Diff.ApplyNonConflicts.Left.text=Apply Non-Conflicting Changes from the Left Side
+action.Diff.ApplyNonConflicts.Right.text=Apply Non-Conflicting Changes from the Right Side
+action.Diff.ComparePartial.Base.Left.text=Compare Left and Middle Contents
+action.Diff.ComparePartial.Base.Right.text=Compare Middle and Right Contents
+action.Diff.ComparePartial.Left.Right.text=Compare Left and Right Contents
 
 action.FileChooser.ShowHiddens.text=Show Hidden Files and Directories
 action.FileChooser.ShowHiddens.description=Show hidden files and directories
