move maven importing tests to the MAVEN_INTEGRATION_TESTS group

--- a/community-tests/src/tests/testGroups.properties
+++ b/community-tests/src/tests/testGroups.properties
@@ -134,4 +134,6 @@ org.jetbrains.plugins.gradle.tooling.builder.*
 
 [MAVEN_INTEGRATION_TESTS]
 org.jetbrains.idea.maven.importing.*
+org.jetbrains.idea.maven.project.importing.*
 org.jetbrains.idea.maven.compiler.*
+org.jetbrains.idea.maven.dom.*
