--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -177,6 +177,8 @@ ide.mac.pressAndHold.workaround=true
 ide.mac.pressAndHold.workaround.description=Enable workaround for press-and-hold input method for accented characters on Mac OS
 ide.mac.pressAndHold.brute.workaround=false
 ide.mac.pressAndHold.brute.workaround.description=Enable alternative workaround for press-and-hold input method for accented characters on Mac OS. Might work in more cases, but known to cause issues with Japanese text input.
+ide.mac.forceTouch=false
+ide.mac.forceTouch.description=Magic Trackpad 2 force touch support
 ide.perProjectModality=false
 ide.perProjectModality.description=New modality approach. All dialogs are DOCUMENT_MODAL expect ide-wide dialogs
 
