--- a/community-tests/src/tests/testGroups.properties
+++ b/community-tests/src/tests/testGroups.properties
@@ -137,3 +137,4 @@ org.jetbrains.idea.maven.importing.*
 org.jetbrains.idea.maven.project.importing.*
 org.jetbrains.idea.maven.compiler.*
 org.jetbrains.idea.maven.dom.*
+org.jetbrains.idea.maven.indices.*
