added pycharm build version to artifact name

--- a/python/educational-python/build.gradle
+++ b/python/educational-python/build.gradle
@@ -56,6 +56,12 @@ subprojects {
     sandboxDirectory = new File(rootProject.projectDir, "gradleBuild/idea-sandbox")
   }
 
+  afterEvaluate {
+    tasks.getByName('buildPlugin') {
+      archiveName = "$intellij.pluginName-$version-${pycharmVersion}.zip"
+    }
+  }
+
   buildDir = new File(rootProject.projectDir, "gradleBuild/" + project.name)
 }
 
