case in menu items corrected (IDEA-155665)

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1456,7 +1456,7 @@ action.UnmarkRoot.text=Unmark Root
 action.CreateLibraryFromFile.text=Add as Library...
 action.ImportModuleFromImlFile.text=Import Module
 action.ImportModuleFromImlFile.description=Import iml file as a module to the project
-group.MarkRootGroup.text=Mark Directory As
+group.MarkRootGroup.text=Mark Directory as
 action.CreateLauncherScript.text=Create Command-line Launcher...
 action.CreateLauncherScript.description=Create a script for opening files and projects from the command line
 action.CreateDesktopEntry.text=Create Desktop Entry...
@@ -1467,7 +1467,7 @@ action.EditorGutterToggleLocalSoftWraps.gutterText=Soft-Wrap Current File
 action.EditorGutterToggleGlobalLineNumbers.text=Show Line Numbers
 action.EditorGutterToggleGlobalIndentLines.text=Show Indent Guides
 action.ExcludeFromProject.text=Exclude From Project...
-group.MarkFileAs.text=Mark File As
+group.MarkFileAs.text=Mark File as
 action.MarkAsPlainTextAction.text=Mark as Plain Text
 action.MarkAsOriginalTypeAction.text=Mark as
 
