--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -499,6 +499,7 @@ editor.injected.highlighting.enabled.description=Disables injected fragments hig
 run.processes.with.pty=false
 kill.windows.processes.softly=false
 output.reader.blocking.mode=false
+disable.winp=false
 
 ide.certificate.manager=true
 
