IG: clarify option and description

--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1322,7 +1322,7 @@ unqualified.static.usage.ignore.field.option=Ignore unqualified field accesses
 unqualified.static.usage.ignore.method.option=Ignore unqualified method calls
 unqualified.static.usage.qualify.field.quickfix=Qualify static field access
 unqualified.static.usage.qualify.method.quickfix=Qualify static method call
-too.broad.scope.allow.option=<html>Allow initializer of variables to construct objects.<br>(Potentially unsafe: quick fix may modify semantics if the constructor has non-local side-effects)</html>
+too.broad.scope.allow.option=<html>Report variables with a new expression as initializer<br>(Potentially unsafe: quick fix may modify semantics if the constructor has non-local side-effects)</html>
 too.broad.scope.only.blocks.option=Only report variables that can be moved into inner blocks
 too.broad.scope.narrow.quickfix=Narrow scope of ''{0}''
 press.escape.to.remove.highlighting.message=Press Escape to remove the highlighting
