[ui] wording (IDEA-155646)

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -19,6 +19,12 @@ action.RunConfiguration.description=Select Run/Debug Configuration
 action.ShowIntentionActions.text=Show Intention Actions
 action.ToggleReadOnlyAttribute.text=Toggle Read-Only Attribute
 action.ToggleReadOnlyAttribute.description=Toggle read-only attribute of current file
+# suppress inspection "UnusedMessageFormatParameter"
+action.ToggleReadOnlyAttribute.files=Make {2,choice,1#File|2#Files} {0,choice,0#Read-only|1#Writeable}
+# suppress inspection "UnusedMessageFormatParameter"
+action.ToggleReadOnlyAttribute.dirs=Make {3,choice,1#Directory|2#Directories} {0,choice,0#Read-only|1#Writeable}
+# suppress inspection "UnusedMessageFormatParameter"
+action.ToggleReadOnlyAttribute.mixed=Make Files/Directories {0,choice,0#Read-only|1#Writeable}
 action.TogglePopupHints.text=Toggle Popup Hints for Current File
 action.RunGc.text=Run Garbage Collector
 action.ShowPopupMenu.text=Show Context Menu
