[ui] "File Path" action cleanup (IDEA-155487)

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -397,6 +397,7 @@ action.FileStructurePopup.text=F_ile Structure
 action.FileStructurePopup.description=Popup structure of the current file for quick navigation
 action.ShowFilePath.text=File _Path
 action.ShowFilePath.description=Popup path of the current file for opening in external file manager
+action.ShowFilePath.tuned={0,choice,0#File|1#Directory} _Path
 action.SelectIn.text=Se_lect In...
 action.SelectIn.description=Select the current class or method in any view
 action.FixDocComment.text=Fix doc comment
